--- a/ebook/ebookstore/templates/ebookstore/Book-manage.html
+++ b/ebook/ebookstore/templates/ebookstore/Book-manage.html
@@ -13,7 +13,7 @@
                     <div class="span12">
                     	<div class="table-toolbar">
                           	<div class="btn-group">
-                             	<a href="AddBook.html"><button class="btn btn-success" >添加书籍</button></a>
+                             	<a href="/ebookstore/addBook"><button class="btn btn-success" >添加书籍</button></a>
                           	</div>
 								<form action="#" class="pull-right">
 									<div class="form-group has-feedback" >
